--- a/requirements.txt
+++ b/requirements.txt
@@ -34,4 +34,5 @@ sortedcontainers==2.4.0
 asyncio==3.4.3
 pycparser==2.21
 cffi==1.15.1
-python-docx==0.8.11 
+python-docx==0.8.11
+Flask-Session==0.5.0 
